--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-
+    <!-- header start -->
     <header>
         <nav>
             <div class="header-content">
 
                 <ul>
-                    <li class="hover-underline-animation"><a href="#services">O nás</a></li>
+                    <li class="hover-underline-animation"><a href="#landing_page">O nás</a></li>
                     <li class="hover-underline-animation"><a href="#pricing">Ceník</a></li>
                     <div class="logo">
                         <img src="img/logo.webp" alt="Logo">
@@ -30,8 +30,11 @@
             </div>
         </nav>
     </header>
-    <section class="landing_page">
-        <div class="carousel carousel_ _fade">
+    <!-- header end -->
+
+    <!-- hero start -->
+    <section id="landing_page">
+        <div class="carousel">
             <div class="carousel_inner">
                 <div class="carousel_item carousel_item__active">
                     <img src="img/barber1 (1).png" alt="" class="carousel_img">
@@ -39,7 +42,7 @@
                         <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
                         <p>BARBERSHOP PEPE
                         </p>
-                        <hr>
+                        <hr class="hr">
                         <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
                             chtějí užit
                             dokonalou péčí
@@ -52,12 +55,12 @@
                     </div>
                 </div>
                 <div class="carousel_item ">
-                    <img src="img/barber2.jpg" alt="" class="carousel_img">
+                    <img src="img/barber2ss.png" alt="" class="carousel_img">
                     <div class="carousel_caption">
                         <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
                         <p>BARBERSHOP PEPE
                         </p>
-                        <hr>
+                        <hr class="hr">
                         <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
                             chtějí užit
                             dokonalou péčí
@@ -69,16 +72,14 @@
                             nabízíme sklenku dobrého džusů.</p>
                     </div>
                 </div>
-                <!-- <div class="carousel_item">
-                <img src="barber3.jpg" alt="" class="carousel_img">
-            </div> -->
+
                 <div class="carousel_item ">
-                    <img src="img/barber3.jpg" alt="" class="carousel_img">
+                    <img src="img/barbers.png" alt="" class="carousel_img">
                     <div class="carousel_caption">
                         <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
                         <p>BARBERSHOP PEPE
                         </p>
-                        <hr>
+                        <hr class="hr">
                         <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
                             chtějí užit
                             dokonalou péčí
@@ -93,24 +94,11 @@
             </div>
         </div>
     </section>
-    <!-- <section class="hero">
+    <!-- hero end -->
 
-        <div class="hero-text">
-            <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
-            <p>BARBERSHOP PEPE
-            </p>
-            <hr>
-            <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si chtějí užit
-                dokonalou péčí
-                o svůj zevnějšek. U nás si odpočinete, pokecáte, proberete nejrůznější témata nebo si v klidu přečtěte
-                noviny. Dále Vám můžeme nabídnout výtečnou kávu nebo sklenku něčeho tvrdšího. Pro mladé zákazníky
-                nabízíme sklenku dobrého džusů.</p>
-        </div>
-    </section> -->
-
+    <!-- pricing start -->
     <section id="pricing">
         <div class="pricing-section">
-            <!-- <h2>CENÍK</h2> -->
             <div class="pricing-container">
                 <div class="pricing-card-left">
                     <div id="triangle-bottomleft"></div>
@@ -144,10 +132,11 @@
                     <hr class="hr-price">
                 </div>
             </div>
-            <!-- ... More services can be added here ... -->
         </div>
     </section>
+    <!-- pricing end -->
 
+    <!-- gallery start -->
     <section id="gallery">
         <h1 class="prices">GALLERY</h1>
         <div class="wrapper">
@@ -156,20 +145,22 @@
                 </div>
                 <div class="wide"><img src="img/hai-phung-m4Pd_e-4zKs-unsplash.jpg" alt="Gallery Image 1">
                 </div>
-                <div class="big"> <img src="img/apothecary-87-WN1P9aSLfa4-unsplash.jpg" alt="Gallery Image 2">
+                <div class="wide"> <img src="img/andrea-donato-MNu0n-3BIKs-unsplash.jpg" alt="Gallery Image 2">
                 </div>
                 <div class="tall"> <img src="img/agustin-fernandez-1Pmp9uxK8X8-unsplash.jpg" alt="Gallery Image 3">
                 </div>
                 <div class="wide"> <img src="img/jason.jpg" alt="Gallery Image 3">
                 </div>
                 <div class="tall"> <img src="img/andrea-donato-vuON347SuzE-unsplash.jpg" alt="Gallery Image 3"></div>
-                <div class="wide"> <img src="img/hair.jpg" alt=""> </div>
-
-
-
+                <div class="tall"> <img src=" img/hair.jpg" alt=""> </div>
+                <div> <img src=" img/apothecary-87-WN1P9aSLfa4-unsplash.jpg" alt=""> </div>
+                <div> <img src=" img/allef-vinicius-IvQeAVeJULw-unsplash.jpg" alt=""> </div>
             </div>
         </div>
     </section>
+    <!-- gallery end -->
+
+    <!-- contact form start -->
     <section id="contact">
         <div class="contact_form">
             <div class="container">
@@ -188,7 +179,9 @@
             </div>
         </div>
     </section>
+    <!-- contact form end -->
 
+    <!-- contact container start -->
     <section class="hero1">
         <div class="contact-container">
             <div class="contact-card-left">
@@ -214,7 +207,10 @@
 
                     <h1 class="contact-info-header">+420 607 942 500
                     </h1>
-                    <h1 class="contact-info">sirbazar@seznam.cz </h1>
+                </div>
+                <div>
+                    <img class="icons" src="img/contact-email-mail-svgrepo-com.svg" alt="">
+                    <h1 class="contact-info-header">sirbazar@seznam.cz </h1>
                 </div>
 
                 <div>
@@ -233,11 +229,16 @@
 
     </section>
 
+    <!-- contact container end -->
 
+    <!-- footer start -->
 
     <footer>
         <p class="copyright">&copy; 2023 Webgroo. All rights reserved.</p>
     </footer>
+    <!-- footer end -->
+
+
 </body>
 
 </html>
@@ -263,7 +264,7 @@
     function autoSlide() {
         setInterval(() => {
             slide(getItemActiveIndex() + 1);
-        }, 3000); // slide speed = 3s
+        }, 7000); // slide speed = 3s
     }
 
     function slide(toIndex) {
