--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
 <body>
     <!-- header start -->
-    <header>
-        <nav>
-            <div class="header-content">
 
-                <ul>
-                    <li class="hover-underline-animation"><a href="#landing_page">O nás</a></li>
-                    <li class="hover-underline-animation"><a href="#pricing">Ceník</a></li>
-                    <div class="logo">
-                        <img src="img/logo.webp" alt="Logo">
-                    </div>
-                    <li class="hover-underline-animation"><a href="#gallery">Naše práce</a></li>
-                    <li class="hover-underline-animation"><a href="#contact">Kontakt</a></li>
-                </ul>
-            </div>
+    <header>
+        <nav class="navi">
+            <ul class="navi-list">
+                <li><a href="#landing_page">O nás</a></li>
+                <li><a href="#pricing">Ceník</a></li>
+                <li class="centered-logo">
+                    <a href="/">
+                        <div class="logo"><img src="img/logo.webp" alt=""></div>
+                    </a>
+                </li>
+                <li><a href="#gallery">Galerie</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+            </ul>
         </nav>
     </header>
     <!-- header end -->
@@ -38,58 +38,57 @@
             <div class="carousel_inner">
                 <div class="carousel_item carousel_item__active">
                     <img src="img/barber1 (1).png" alt="" class="carousel_img">
-                    <div class="carousel_caption">
-                        <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
-                        <p>BARBERSHOP PEPE
-                        </p>
-                        <hr class="hr">
-                        <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
-                            chtějí užit
-                            dokonalou péčí
-                            o svůj zevnějšek. U nás si odpočinete, pokecáte, proberete nejrůznější témata nebo si v
-                            klidu
-                            přečtěte
-                            noviny. Dále Vám můžeme nabídnout výtečnou kávu nebo sklenku něčeho tvrdšího. Pro mladé
-                            zákazníky
-                            nabízíme sklenku dobrého džusů.</p>
-                    </div>
+                </div>
+                <div class="carousel_caption">
+                    <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
+                    <p>BARBERSHOP PEPE
+                    </p>
+                    <hr class="hr">
+                    <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
+                        chtějí užit
+                        dokonalou péčí
+                        o svůj zevnějšek. U nás si odpočinete, pokecáte, proberete nejrůznější témata nebo si v
+                        klidu
+                        přečtěte
+                        noviny. Dále Vám můžeme nabídnout výtečnou kávu nebo sklenku něčeho tvrdšího. Pro mladé
+                        zákazníky
+                        nabízíme sklenku dobrého džusů.</p>
                 </div>
                 <div class="carousel_item ">
                     <img src="img/barber2ss.png" alt="" class="carousel_img">
-                    <div class="carousel_caption">
-                        <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
-                        <p>BARBERSHOP PEPE
-                        </p>
-                        <hr class="hr">
-                        <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
-                            chtějí užit
-                            dokonalou péčí
-                            o svůj zevnějšek. U nás si odpočinete, pokecáte, proberete nejrůznější témata nebo si v
-                            klidu
-                            přečtěte
-                            noviny. Dále Vám můžeme nabídnout výtečnou kávu nebo sklenku něčeho tvrdšího. Pro mladé
-                            zákazníky
-                            nabízíme sklenku dobrého džusů.</p>
-                    </div>
                 </div>
-
+                <div class="carousel_caption">
+                    <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
+                    <p>BARBERSHOP PEPE
+                    </p>
+                    <hr class="hr">
+                    <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
+                        chtějí užit
+                        dokonalou péčí
+                        o svůj zevnějšek. U nás si odpočinete, pokecáte, proberete nejrůznější témata nebo si v
+                        klidu
+                        přečtěte
+                        noviny. Dále Vám můžeme nabídnout výtečnou kávu nebo sklenku něčeho tvrdšího. Pro mladé
+                        zákazníky
+                        nabízíme sklenku dobrého džusů.</p>
+                </div>
                 <div class="carousel_item ">
                     <img src="img/barbers.png" alt="" class="carousel_img">
-                    <div class="carousel_caption">
-                        <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
-                        <p>BARBERSHOP PEPE
-                        </p>
-                        <hr class="hr">
-                        <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
-                            chtějí užit
-                            dokonalou péčí
-                            o svůj zevnějšek. U nás si odpočinete, pokecáte, proberete nejrůznější témata nebo si v
-                            klidu
-                            přečtěte
-                            noviny. Dále Vám můžeme nabídnout výtečnou kávu nebo sklenku něčeho tvrdšího. Pro mladé
-                            zákazníky
-                            nabízíme sklenku dobrého džusů.</p>
-                    </div>
+                </div>
+                <div class="carousel_caption">
+                    <h1>ODBORNÍCI S BŘITVOU V RUCE</h1>
+                    <p>BARBERSHOP PEPE
+                    </p>
+                    <hr class="hr">
+                    <p class="history">Panský salon je místem, kde se setkávají opravdové chlapi a chlapci, kteří si
+                        chtějí užit
+                        dokonalou péčí
+                        o svůj zevnějšek. U nás si odpočinete, pokecáte, proberete nejrůznější témata nebo si v
+                        klidu
+                        přečtěte
+                        noviny. Dále Vám můžeme nabídnout výtečnou kávu nebo sklenku něčeho tvrdšího. Pro mladé
+                        zákazníky
+                        nabízíme sklenku dobrého džusů.</p>
                 </div>
             </div>
         </div>
@@ -257,28 +256,75 @@
         });
     });
 
+
+    // carousel start
+    // window.addEventListener("load", () => {
+    //     autoSlide();
+    // });
+
+    // function autoSlide() {
+    //     setInterval(() => {
+    //         slide(getItemActiveIndex() + 1);
+    //     }, 7000); // slide speed = 3s
+    // }
+
+    // function slide(toIndex) {
+    //     const itemsArray = Array.from(document.querySelectorAll(".carousel_item"));
+    //     const itemActive = document.querySelector(".carousel_item__active");
+
+    //     itemsArray.forEach(item => {
+    //         item.classList.remove("carousel_item__active");
+    //     });
+
+    //     // Ensure toIndex stays within valid range
+    //     const newItemIndex = (toIndex + itemsArray.length) % itemsArray.length;
+    //     const newItem = itemsArray[newItemIndex];
+    //     newItem.classList.add("carousel_item__active");
+    // }
+
+    // function getItemActiveIndex() {
+    //     const itemsArray = Array.from(document.querySelectorAll(".carousel_item"));
+    //     const itemActive = document.querySelector(".carousel_item__active");
+    //     const itemActiveIndex = itemsArray.indexOf(itemActive);
+    //     return itemActiveIndex;
+    // }
+    // carousel end
+
     window.addEventListener("load", () => {
         autoSlide();
-    });
+    })
 
     function autoSlide() {
         setInterval(() => {
             slide(getItemActiveIndex() + 1);
-        }, 7000); // slide speed = 3s
+        }, 10000); // slide speed = 3s
     }
 
     function slide(toIndex) {
         const itemsArray = Array.from(document.querySelectorAll(".carousel_item"));
         const itemActive = document.querySelector(".carousel_item__active");
 
-        itemsArray.forEach(item => {
-            item.classList.remove("carousel_item__active");
-        });
+        // check if toIndex exceeds the number of carousel items
+        if (toIndex >= itemsArray.length) {
+            toIndex = 0;
+        }
 
-        // Ensure toIndex stays within valid range
-        const newItemIndex = (toIndex + itemsArray.length) % itemsArray.length;
-        const newItem = itemsArray[newItemIndex];
-        newItem.classList.add("carousel_item__active");
+        const newItemActive = itemsArray[toIndex];
+
+        // start transition
+        newItemActive.classList.add("carousel_item__pos_next");
+        setTimeout(() => {
+            newItemActive.classList.add("carousel_item__next");
+            itemActive.classList.add("carousel_item__next");
+        }, 5000);
+
+        // remove all transition class and switch active class
+        newItemActive.addEventListener("transitionend", () => {
+            itemActive.className = "carousel_item";
+            newItemActive.className = "carousel_item carousel_item__active";
+        }, {
+            once: true
+        });
     }
 
     function getItemActiveIndex() {
@@ -287,6 +333,4 @@
         const itemActiveIndex = itemsArray.indexOf(itemActive);
         return itemActiveIndex;
     }
-
-
 </script>
