--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="carousel">
             <div class="carousel_inner">
                 <div class="carousel_item carousel_item__active">
-                    <img src="img/barber1 (1).png" alt="" class="carousel_img">
+                    <img src="img/barber1 (1) (1).png" alt="" class="carousel_img">
                 </div>
                 <div class="carousel_caption">
                     <p class="carousel_subtitle">ODBORNÍCI S BŘITVOU V RUCE</p>
@@ -79,7 +79,7 @@
                         nabízíme sklenku dobrého džusů.</p>
                 </div>
                 <div class="carousel_item ">
-                    <img src="img/barbers.png" alt="" class="carousel_img">
+                    <img src="img/watches.png" alt="" class="carousel_img">
                 </div>
                 <div class="carousel_caption">
                     <p class="carousel_subtitle">ODBORNÍCI S BŘITVOU V RUCE</p>
@@ -143,7 +143,7 @@
 
     <!-- gallery start -->
     <section id="gallery">
-        <h1 class="title_prices">GALLERY</h1>
+        <h1 class="title_prices">GALERIE</h1>
         <div class="wrapper">
             <div class="grid-wrapper">
                 <div><img src="img/hair.jpg" alt="Gallery Image 1">
